tests/data/pl0/valid/limit_number_max_digits_ok.pl0
const x = 2147483647;
begin
  ! x
end.
