tests/data/pl0/invalid/error_qstmt_non_variable.pl0
const x = 1;
begin
  ? x
end.
